# bt-application-web

./: Cargo.toml  index.css  index.html  rustfmt.toml
src/: app.rs  icons.rs  main.rs  navbar.rs  routes.rs  slider.rs  torrent_engine.rs  utiles.rs
src/meta/: metainfo.rs  mod.rs  trackerinfo.rs
src/pages/: function.rs  home.rs  info.rs  mod.rs  search.rs  torrent.rs
