[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.8.0"
log = "0.4.17"
wasm-logger = "0.2.0"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
js-sys = "0.3.61"
url = "2.3.1"
percent-encoding = "2.2.0"

[dependencies.web-sys]
version = "0.3.61"
features = ["File", "DragEvent", "DataTransfer"]
